<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/w_blue"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/line_r20"
            android:orientation="horizontal">
            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/six_m"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/six_m"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/date"/>
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/six_m"
                android:textColor="@color/black"
                android:text="@string/desc"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/six_m"
                android:text="@string/nominal"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            tools:listitem="@layout/item_main"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/line_r20"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_baseline_add_circle_50"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/h_margin"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="@dimen/v_margin"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/rp_0"/>

    </LinearLayout>

</RelativeLayout>