<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/w_blue"
    android:layout_marginTop="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/six_m"
        android:layout_marginBottom="@dimen/six_m"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_number"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginStart="@dimen/six_m"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/six_m"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/date"/>
        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/six_m"
            android:textColor="@color/black"
            android:text="@string/desc"/>

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/six_m"
            android:text="@string/rp_0_0"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>