<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/w_blue"
    tools:context=".ui.main.InputActivity">
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/ic_baseline_arrow_circle_left_48"
        android:layout_marginEnd="100dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/input_note"/>
    <EditText
        android:id="@+id/edt_desc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/line_r20"
        android:paddingStart="@dimen/v_margin"
        android:paddingEnd="@dimen/v_margin"
        android:hint="@string/input_desc"
        android:inputType="text"
        android:autofillHints="@string/input_desc"
        android:layout_marginStart="@dimen/h_margin"
        android:layout_marginEnd="@dimen/h_margin"/>
    <EditText
        android:id="@+id/edt_nominal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/v_margin"
        android:background="@drawable/line_r20"
        android:paddingStart="@dimen/v_margin"
        android:paddingEnd="@dimen/v_margin"
        android:inputType="number"
        android:autofillHints="@string/rp_0"
        android:hint="@string/rp_0"
        android:layout_marginStart="@dimen/h_margin"
        android:layout_marginEnd="@dimen/h_margin"/>
    <Button
        android:id="@+id/btn_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/out"
        android:textColor="@color/white"
        android:layout_marginStart="100dp"
        android:background="@drawable/bgcl_red_r20"
        android:layout_marginEnd="100dp"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/in"
        android:textColor="@color/white"
        android:layout_marginStart="100dp"
        android:background="@drawable/bgcl_r20"
        android:layout_marginEnd="100dp"/>

</LinearLayout>